add reply/retweet/quote buttons

--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -114,6 +114,7 @@
     <Compile Include="InstallViewModel.cs" />
     <Compile Include="IShell.cs" />
     <Compile Include="ErrorViewModel.cs" />
+    <Compile Include="Router.cs" />
     <Compile Include="TimelinesViewModel.cs" />
     <Compile Include="Timelines\TimelineFactory.cs" />
     <Compile Include="Messages\Messages.cs" />
