bind all tweet actions to the shell view model

--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -111,10 +111,10 @@
     <Compile Include="Converters\SourceToUriConverter.cs" />
     <Compile Include="Converters\IsValidTweetLengthToBrushConverter.cs" />
     <Compile Include="DelegateCommand.cs" />
+    <Compile Include="Enforce.cs" />
     <Compile Include="InstallViewModel.cs" />
     <Compile Include="IShell.cs" />
     <Compile Include="ErrorViewModel.cs" />
-    <Compile Include="Router.cs" />
     <Compile Include="TimelinesViewModel.cs" />
     <Compile Include="Timelines\TimelineFactory.cs" />
     <Compile Include="Messages\Messages.cs" />
