--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -116,18 +116,15 @@
     <Compile Include="IShell.cs" />
     <Compile Include="ErrorViewModel.cs" />
     <Compile Include="TimelinesViewModel.cs" />
-    <Compile Include="Timelines\TimelineFactory.cs" />
     <Compile Include="Messages\Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellViewModel.cs" />
-    <Compile Include="Timelines\DirectMessageTimeline.cs" />
-    <Compile Include="Timelines\StreamingTimeline.cs" />
-    <Compile Include="Timelines\StatusTimeline.cs" />
-    <Compile Include="Timelines\Timeline.cs" />
+    <Compile Include="Timeline.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Models\Tweet.cs" />
     <Compile Include="Controls\TweetTextBlock.cs" />
     <Compile Include="TwitterClient.cs" />
+    <Compile Include="TwitterSubscriptions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
