--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -110,8 +110,8 @@
     <Compile Include="Converters\SourceToContentConverter.cs" />
     <Compile Include="Converters\SourceToUriConverter.cs" />
     <Compile Include="Converters\IsValidTweetLengthToBrushConverter.cs" />
-    <Compile Include="DelegateCommand.cs" />
-    <Compile Include="Enforce.cs" />
+    <Compile Include="Core\DelegateCommand.cs" />
+    <Compile Include="Core\Enforce.cs" />
     <Compile Include="InstallViewModel.cs" />
     <Compile Include="IShell.cs" />
     <Compile Include="ErrorViewModel.cs" />
@@ -119,13 +119,13 @@
     <Compile Include="Messages\Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellViewModel.cs" />
-    <Compile Include="Timeline.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Models\Tweet.cs" />
     <Compile Include="Controls\TweetTextBlock.cs" />
-    <Compile Include="TweetParser.cs" />
-    <Compile Include="TwitterClient.cs" />
-    <Compile Include="TwitterSubscriptions.cs" />
+    <Compile Include="Models\TweetCollection.cs" />
+    <Compile Include="Core\TweetParser.cs" />
+    <Compile Include="Core\TwitterClient.cs" />
+    <Compile Include="Core\TwitterSubscriptions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
