--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -119,6 +119,7 @@
     <Compile Include="InstallViewModel.cs" />
     <Compile Include="IShell.cs" />
     <Compile Include="ErrorViewModel.cs" />
+    <Compile Include="Models\DirectMessage.cs" />
     <Compile Include="Models\JsonHelper.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="StatusViewModel.cs" />
