--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -122,6 +122,7 @@
     <Compile Include="ErrorViewModel.cs" />
     <Compile Include="Models\DirectMessage.cs" />
     <Compile Include="Models\JsonHelper.cs" />
+    <Compile Include="Models\Relationship.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="StatusViewModel.cs" />
     <Compile Include="TimelinesViewModel.cs" />
