--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Core\TweetParser.cs" />
     <Compile Include="Core\TwitterClient.cs" />
     <Compile Include="Core\TwitterSubscriptions.cs" />
+    <Compile Include="TweetsPanelViewModel.cs" />
     <Compile Include="UserInfoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +182,10 @@
     <Page Include="AuthorizationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TweetsPanelView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UserInfoView.xaml">
       <Generator>MSBuild:Compile</Generator>
