--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -122,6 +122,7 @@
     <Compile Include="IShell.cs" />
     <Compile Include="ErrorViewModel.cs" />
     <Compile Include="Models\DirectMessage.cs" />
+    <Compile Include="Models\ExtendedUser.cs" />
     <Compile Include="Models\JsonHelper.cs" />
     <Compile Include="Models\Relationship.cs" />
     <Compile Include="Models\User.cs" />
@@ -138,6 +139,7 @@
     <Compile Include="Core\TwitterClient.cs" />
     <Compile Include="Core\TwitterSubscriptions.cs" />
     <Compile Include="TweetsPanelViewModel.cs" />
+    <Compile Include="UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
