--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -122,15 +122,13 @@
     <Compile Include="Models\JsonHelper.cs" />
     <Compile Include="Models\Relationship.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="OAuth\OAuthClientExtensions.cs" />
+    <Compile Include="OAuth\OAuthExtensions.cs" />
     <Compile Include="OAuth\MethodType.cs" />
     <Compile Include="OAuth\OAuthAuthorizer.cs" />
     <Compile Include="OAuth\OAuthBase.cs" />
     <Compile Include="OAuth\OAuthClient.cs" />
-    <Compile Include="OAuth\Parameter.cs" />
     <Compile Include="OAuth\Token.cs" />
     <Compile Include="OAuth\TokenResponse.cs" />
-    <Compile Include="OAuth\Utility.cs" />
     <Compile Include="StatusViewModel.cs" />
     <Compile Include="TimelinesViewModel.cs" />
     <Compile Include="Messages\Messages.cs" />
