--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -119,8 +119,10 @@
     <Compile Include="ErrorViewModel.cs" />
     <Compile Include="Models\DirectMessage.cs" />
     <Compile Include="Models\ExtendedUser.cs" />
+    <Compile Include="Models\ITweetItem.cs" />
     <Compile Include="Models\JsonHelper.cs" />
     <Compile Include="Models\Relationship.cs" />
+    <Compile Include="Models\SearchResult.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="OAuth\OAuthExtensions.cs" />
     <Compile Include="OAuth\OAuthAuthorizer.cs" />
