--- a/src/PingPong/PingPong.csproj
+++ b/src/PingPong/PingPong.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Models\ExtendedUser.cs" />
     <Compile Include="Models\ITweetItem.cs" />
     <Compile Include="Models\JsonHelper.cs" />
+    <Compile Include="Models\List.cs" />
     <Compile Include="Models\Relationship.cs" />
     <Compile Include="Models\SearchResult.cs" />
     <Compile Include="Models\User.cs" />
