--- a/src/PingPong/packages.config
+++ b/src/PingPong/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="2.5.2.830" />
+  <package id="Autofac" version="2.6.3.862" targetFramework="sl50" />
   <package id="Caliburn.Micro" version="1.2.0" />
   <package id="Rx-Main" version="1.0.10621" />
   <package id="Rx-Silverlight" version="1.0.10621" />
+  <package id="SilverlightToolkit-Core" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Layout" version="4.2010.4" targetFramework="sl50" />
 </packages>
