--- a/src/PingPong/packages.config
+++ b/src/PingPong/packages.config
@@ -2,8 +2,13 @@
 <packages>
   <package id="Autofac" version="2.6.3.862" targetFramework="sl50" />
   <package id="Caliburn.Micro" version="1.2.0" />
-  <package id="Rx-Main" version="1.0.10621" />
-  <package id="Rx-Silverlight" version="1.0.10621" />
+  <package id="Rx-Core" version="2.0.21103" targetFramework="sl50" />
+  <package id="Rx-Interfaces" version="2.0.21103" targetFramework="sl50" />
+  <package id="Rx-Linq" version="2.0.21103" targetFramework="sl50" />
+  <package id="Rx-Main" version="2.0.21103" targetFramework="sl50" />
+  <package id="Rx-PlatformServices" version="2.0.21103" targetFramework="sl50" />
+  <package id="Rx-Silverlight" version="2.0.21103" targetFramework="sl50" />
+  <package id="Rx-Xaml" version="2.0.21103" targetFramework="sl50" />
   <package id="SilverlightToolkit-Core" version="4.2010.4" targetFramework="sl50" />
   <package id="SilverlightToolkit-Layout" version="4.2010.4" targetFramework="sl50" />
 </packages>
